hard-gists/11192605/run.log
=== Docker Run Log for 11192605 ===
Started at: Mi 29. Okt 11:52:06 CET 2025

[2025-10-29 11:52:07] START: Running container for 11192605
[2025-10-29 11:52:07] SUCCESS: Container 23e39afb7b5791517302c431a22efe9b007d5aef19b1bf7fa1680ac29112b829 started for 11192605
=== Container logs for 11192605 ===
  File "/snippet.py", line 53
    print x
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 11192605 ===
[2025-10-29 11:52:09] INFO: Container 23e39afb7b5791517302c431a22efe9b007d5aef19b1bf7fa1680ac29112b829 has stopped
